fix/SOW5-422: Fixed chat collapse

--- a/src/AppModule/containers/AppChatOneToOne/assets/scss/style.scss
+++ b/src/AppModule/containers/AppChatOneToOne/assets/scss/style.scss
@@ -3,7 +3,7 @@
 
 .collapse-chat {
     width: 250px !important;
-    margin-top: 530px !important;
+    margin-top: 444px !important;
     transition: width 300ms, margin-top 300ms;
 }
 
